# gobazel

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
server/cmd/: BUILD.bazel  main.go
server/httpModel/computeRequest/: BUILD.bazel  schema.json
server/httpModel/computeResponse/: BUILD.bazel  schema.json
